# media

./: CMakeLists.txt  README.md  generate_test_video.sh
examples/: brisque_video.cpp
include/fr/media/: audio_decoder_subscriber  audio_resampler  decoder  decoder_interface  decoder_subscriber_interface  frame2cv  motion_detector  sphinx_audio  video_decoder_subscriber
python3/: frmedia.cpp
test/: audio_resampler_test.cpp  decoder_test.cpp  frame2cv_test.cpp  sphinx_audio.cpp  static_bg_motion_detector_test.cpp  test_runner_basic.cpp
test/data/: motion_test.webm
